css/mycss.css
html {
    position: relative;

}
body{
  font-family: sans-serif;
  background: #EEEEEE;

}

nav {
  background-color: blue;
}

.laptop{
  display: block;
  float: right;
  width: 400px;
  padding: 30px;
  padding-right: 0px;
  border-left: ridge;
  border-width: 2px;
  background-color: white;
  margin-left: 15px;

}

.log{
  width: 20%;
  text-align: center;
  float: left;
}

.mainimg{
  display: block;
  float: left;
  width: 30%;
  height: auto;
  padding-right: 15px;
  padding-left: 15px;
  background-color: white;
  margin-right: 25px;
  margin-bottom: 15px;
}
 #yikes{
 }
.mainimg2{
  display: block;
  float: right;
  width: 23%;
  height: auto;
  border-width: 2px;
  background-color: white;
  margin-right: 15px;
  margin-bottom: 15px;
}

.mainimg3{
  display: block;
  float: left;
  width: 600px;
  height: auto;
  padding-right: 15px;
  padding-left: 15px;
  background-color: white;
  margin-right: 15px;
  margin-bottom: 15px;
}

.mainimg4{
  display: block;
  float: right;
  width: 600px;
  height: auto;
  padding-right: 15px;
  padding-left: 15px;
  background-color: white;
  margin-right: 15px;
  margin-bottom: 15px;
}
.rounded{
  border-radius: 50%;
  width: 150px;
  height: 150px;
  position: relative;
  z-index: 2;
}



a{
  text-decoration: none;
  color: black;
}
.main_content{
  margin-right: 60px;
  margin-left: 60px;
}

div.desc, div.desc_animals, div.desc_activity{
  margin-top: 20px;
  padding-top: 20px;
  padding-bottom: 20px;
  padding-left: 20px;
  padding-right: 20px;
  background-color: white;
  box-shadow: 12px 0 15px -4px #cccccc, -12px 0 8px -4px #cccccc;

}

div.desc p, div.desc_animals p, div.desc_activity p{
  padding-bottom: 15px;
  border-bottom: ridge;
  border-width: 2px;

}

div.content{
  border: none;
}

.extra_wrapper{
  border-top: ridge;
  border-width: 3px;
  display: flex;
  font-size: 0.8em;
}

.extra_wrapper div{
  border: ridge;
  padding: 10px;
  margin: 10px;
  background-color: white;
}



.extra{
  flex: auto;
}



.contact_heading{
  font-size: 1.5em;
}



.CDUlogo{
    position: relative;
    width:25%;
    margin-top:-30px;

  }

h1{
  padding-top: 15px;
  padding-bottom: 15px;
  padding-left:0 ;
  padding-right:0;
  color: white;
  margin-top: -20px;
  text-align: center;
  font-family:sans-serif;
  background-color: #201644;
  background-size: 100%;
  font-size: 2em;
}


.footer{
  position: absolute;
  margin-bottom: -200px;
  left: 0;
  bottom: 0;
  width: 100%;
  background-color: #201644;
  color: white;
  text-align: center;

}

.footer a{
  text-decoration: none;
  color: #FFFFFC;
}

.footer a:hover{
  text-decoration: underline;
  color: #42858C;
}


.social-link li{
  font-family: sans-serif;
  text-align: center;
  list-style: none;
  margin: 10px 30px;
  padding: 20px 20px;
}





h2{
  font-size: 20px;
}

li{
  display: inline;
}

h3{
  margin-top: 30px;
  text-align: center;


}

h3 a{
  text-decoration: none;

}

h3 span{
  color: white;
  padding: 15px;
  padding-left: 150px;
  padding-right: 150px;
  border-radius: 2px;
  clear: both;
  background-color:#f4623a;
  box-shadow: 12px 0 15px -4px #888888, -12px 0 8px -4px #888888;
}



h4{
  font-size: 20px;
}

.item{
  diplay: block;
  background-color: #201644;
  color: white;
  cursor: point;
  padding: 18px;
  width: 90%;
  border: none;
  text-align: center;
  outline: none;
  font-size: 15px;
  margin: 5px;
  margin-left: 3px;




}

.item a{
  color: white;
  padding: 2px 5px;
  text-decoration: none;
}

.desc{
  margin: auto;
  text-align: left;
  height: 800px;
  font-size: 1.5em;
}

.desc_animals{
  margin: auto;
  text-align: left;
  height: 800px;
  font-size: 1.5em;
}

.desc_activity{
  margin: auto;
  height: 500px;
  font-size: 1.5em;
  display: flex;
  justify-content: center;
}

video{
padding-right: 20px;
float: left;
}

.card img{
  padding: 3px;
  margin-top: 5px;
  width: 400px;
  height: 300px;

}

.all_cards{
  text-align: center;
}
 .wrap{
   width: auto;
   margin: auto;
   text-align: center;
   display: inline-block;
 }

.fa-lg{
  margin-left: 3px;
}

.extra_wrapper, fa-lg{
  margin-left: 4px;

}

 .card{
   display: block;
   text-align: center;
   width: 410px;
   float: left;
   margin: 15px;
   border-style: ridge;
   border-width: 1px;
   border-radius: 2px;
   margin-bottom: 100px;
   box-shadow: 12px 0 15px -4px #cccccc, -12px 0 8px -4px #cccccc;
   transition: 0.2s linear;
   background-color: white;
 }

 .card:hover{
   cursor: pointer;
   box-shadow: 12px 0 15px -4px #888888, -12px 0 8px -4px #888888;

 }
 .collapsible{
  display: block;
  background-color:#201644;
  color: white;
  cursor: point;
  padding: 18px;
  width: 90%;
  border: none;
  text-align: center;
  outline: none;
  font-size: 15px;
  margin: 3px;


}

/*Code from https://cssfx.dev/*/


.item, .collapsible{
  z-index: 1;
  position: relative;
  outline: none;
  border: none;

}

 .item::before, .collapsible::before {
  content: '';
  z-index: -1;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: #f4623a;
  transform-origin: center right;
  transform: scaleX(0);
  transition: transform 0.25s ease-in-out;
}

.item:hover, .collapsible:hover {
  cursor: pointer;
}

.item:hover::before, .collapsible:hover::before {
  transform-origin: center left;
  transform: scaleX(1);
}



.content {
  color: white;
  padding: 0 17px;
  overflow: hidden;
  text-align: left;
  font-family:arial;
}


.background_img{
  background-image: url("https://www.anu.edu.au/files/styles/anu_full_920_518/public/guidance/shutterstock_293604095.jpg?itok=glMqF6mS");
  height: 200px;
  width: 100%;
  background-size: cover;
  background-position: center;
  display: block;
  top:200px;

}

.nav_menu{
  top: 0;
  right:0;
  position: absolute;
  float: right;
}

.nav_menu a{
  color: black;
  padding: 15px 30px;
  font-weight: 700;
  font-size: 0.9rem;
  text-decoration: none;
  font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
}


.nav_menu a ul{
  margin: 0;
  padding: 0;
  padding-left: 0px;
  display: flex;
}



.nav_menu a ul li{
  height: 30px;
  line-height: 50px;
  display: block;
}

.nav_menu a:hover{
  background-color: #42858C;
}

.nav_menu li a:hover:not(.active) {
  text-decoration: none;
  background-color: #f4623a;
  color: white;
  transition: 0.6s ease
}

.nav_menu li:hover

.nav_menu li a.active {
  color: #42858C;
  background-color:#046273;
}

ul.breadcrumb {
  padding: 10px 16px;
  list-style: none;
  background-color: #eee;
}
ul.breadcrumb li {
  display: inline;
  font-size: 18px;
}
ul.breadcrumb li+li:before {
  padding: 8px;
  color: black;
  content: "/\00a0";
}
ul.breadcrumb li a {
  color: #0275d8;
  text-decoration: none;
}
ul.breadcrumb li a:hover {
  color: #01447e;
  text-decoration: underline;
}


.all_cards{
  margin-top: 50px;
}



#hcontent, #hcontent2, #hcontent3, #hcontent4, #hcontent5, #hcontent6, #hcontent7, #hcontent8 {
  display: none;
}

.content {
  display: none;
}

.menu_icon{
  display: inline-block;
  cursor: pointer;
  position: relative;
  display: none;
  float: left;
}

.bar1, .bar2, .bar3 {
  width: 35px;
  height: 5px;
  background-color: #333;
  margin: 6px 0;
  transition: 0.4s;
}



h5 span{
  background-color: #046273;
  color: white;
  padding: 5px;
  text-decoration: none;
}


.headingsep{
  margin-top: 50px;
}



.imageContainer img{
  width: 400px;
  height: 200px;
}

.imageContainer{
  margin-top: 30px;
}


.dropbtn {
  color: white;
  padding: 16px;
  font-size: 16px;
  border: none;
}

.dropdown {
  position: relative;
  display: inline-block;

}



.dropdown-content {
  display: none;
  position: absolute;
  min-width: 185px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
}

.dropdown-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

.dropdown-content a:hover {background-color: #f4623a;}

.dropdown:hover .dropdown-content {display: block;}

.dropdown:hover .dropbtn {background-color: #f4623a;}

#glider, #glidercamera{
  width: 17%;
}

#uluru{

}
@keyframes appear {
  0%{
    opacity: 0;
    transform: translateY(-10px);
  }
}

dialog{
  animation: appear 350ms ease-in 1;
  max-width: 500px;

}




#toggle, #toggle2, #toggle3, #toggle4, #toggle5, #toggle6, #toggle7, #toggle8, #toggle9{
  visibility: hidden;
  opacity: 0;
  position: relative;
  z-index: 3;
}

#toggle:checked ~ dialog, #toggle2:checked ~ dialog, #toggle3:checked ~ dialog , #toggle4:checked ~ dialog ,
#toggle5:checked ~ dialog , #toggle6:checked ~ dialog , #toggle7:checked ~ dialog , #toggle8:checked ~ dialog , #toggle9:checked ~ dialog   {
  display: block;
  z-index: 3;
}

label{
  background: skyblue;
  color: white;
  padding: .5em 1em;
  border-radius: 4px;
}
@keyframes appear {
  0%{
    opacity: 0;
    transform: translateY(-10px);
  }
}

dialog{
  animation: appear 350ms ease-in 1;
  max-width: 500px;

}



@media only screen and (max-width: 750px) {


  .laptop{
    display: none;
  }
  .extra_wrapper{
    flex-direction: column;
  }

  .extra_wrapper div{
    padding: 15px;
    margin: 5px;

  }

.contact_heading{
  margin-top: 50px;

}

  h3 span{

    padding-left: 5px;
    padding-right: 5px;

  }

body{
  padding: 0;
}

.main_content{
  padding: 7px;
  margin-right: 0px;
  margin-left: 0px;
}

  .nav_menu{
    display: none;
    background: #F0F1EB;
    position: relative;
    width: 100%;
    height: 50vh;
    top: 50px;
    left: 0;
    transition: 0.5s;
   }

   .nav_menu ul li{
     display: block;
     text-align: center;
     border: 1px solid gray;
     padding: 15px 30px;
     margin-bottom: 10px;
     background-color: white;

   }

ul{
  padding-left: 0px;
}
    .menu_icon{
    display: block;
  }


    .card {
    margin: 0;
    margin-bottom: 50px;
    width: 350px;
  }
    .card img{
    width: 340px;
  }
    .CDUlogo{
      margin-top: 0px;
    width: 50%;
    left: 110px;
    margin-bottom: 20px;
  }
    h1{
    margin-top: 50px;
  }


  .footer{
    width: 100%;
    text-align: center;

  }
  .social-link li{
    list-style: none;
    margin: 10px 10px;
    display: inline-block;
    font-size: 10px;
    padding:0;
  }
  .footer-desc{
    font-size: 10px;
  }


}

